# MEMBRANA

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
membrana/: __init__.py  __main__.py
membrana/geometry/: curves.py  placement.py  pore.py  transforms.py
membrana/models/: annotations.py  lipids.py  membrane.py  modes.py  proteins.py  scene.py
membrana/presets/: registry.py
membrana/rendering/: annotation_renderer.py  lipid_renderer.py  membrane_renderer.py  protein_renderer.py  scene_renderer.py  styles.py  svg_builder.py
membrana/server/: app.py  routes.py  websocket.py
membrana/static/: help.html  index.html
membrana/static/css/: styles.css
membrana/static/js/: api.js  app.js  controls.js  preview.js
membrana/utils/: color.py  math_helpers.py
